Fix 0-height popup issue on Firefox
Not 100% the behaviour I wanted – the automatic height adjustments in
Chrome are what I would prefer for all browsers – but, hey, that should
do it.

--- a/src/common/popup/styles/_additions.scss
+++ b/src/common/popup/styles/_additions.scss
@@ -2,6 +2,8 @@
 
 .popup {
   width: 285px;
+  min-height: 210px;
+  padding-top: 42px;
 }
 
 // Logos
@@ -21,6 +23,7 @@
 
 .navbar-tt {
   border-bottom: 1px solid $gray-lighter;
+  background: #fff;
 }
 
 .nav-text {
